quorum/test/tests/templating/Pass/PassNumberTakesText_13.quorum
class main
    action main
        Test<text> something
        something:doSomething(7.5)
    end
end