quorum/test/tests/templating/Fail/PassNumberTakesInteger_2.quorum
class main
    action main
        Test<integer> something
        something:doSomething(7.5)
    end
end